--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -30,8 +30,8 @@ set -g @dracula-colors "
 "
 set -g window-status-separator " "
 set -g @dracula-show-powerline true
-set -g @dracula-show-right-sep 
-set -g @dracula-show-left-sep 
+set -g @dracula-show-right-sep ""
+set -g @dracula-show-left-sep ""
 set -g @dracula-transparent-powerline-bg true
 set -g @dracula-plugins "ram-usage cpu-usage battery"
 set -g @dracula-ram-usage-colors "cyan dark_gray"
